Draft #2: fix Modal and Slider overlapping, fix Slider empty children bug, add button customization to AddExperiment, and improve ExperimentsPage

--- a/src/stories/components/Modal/styles.scss
+++ b/src/stories/components/Modal/styles.scss
@@ -6,13 +6,13 @@
 /* The Modal (background) */
 .modal {
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgb(255, 255, 255);
 }
 
 /* Modal Content/Box */
@@ -47,4 +47,13 @@
   position: absolute;
   top: $spacing-9;
   width: 24px;
+}
+
+/* Custom button used in ExperimentsPage */
+.button--circular-small {
+  border-radius: 100%;
+  min-width: rem(25px);
+  padding: 0 0;
+  font-weight: 200;
+  font-family: $base-font-family;
 }
